--- a/madurativas/Content/bootstrap.css
+++ b/madurativas/Content/bootstrap.css
@@ -1288,8 +1288,8 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 14px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
   line-height: 1.42857143;
   color: #333;
   background-color: #fff;
@@ -2715,7 +2715,7 @@ label {
   display: inline-block;
   max-width: 100%;
   margin-bottom: 5px;
-  font-weight: bold;
+  
 }
 input[type="search"] {
   -webkit-box-sizing: border-box;
